--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
       color: #b94aa6;
       text-align: center;
       overflow-x: hidden;
-      min-height: 100vh;
+      min-height: 200vh; /* permet de défiler */
       position: relative;
       transition: color 1s ease;
     }
 
-    /* 🌄 Image de fond : pleine largeur, conserve les proportions */
+    /* 🌄 Image de fond pleine largeur + défilement fluide */
     body::before {
       content: "";
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
+      height: 120%; /* un peu plus haute pour permettre le glissement */
       background: url("Capture d'écran 2025-09-10 140417.png") top center no-repeat;
-      background-size: 100% auto; /* Pleine largeur, pas de recadrage */
-      background-color: black;    /* fond neutre autour si besoin */
+      background-size: 100% auto;
+      background-color: black;
       z-index: -1;
-      transition: filter 1s ease;
+      transition: filter 1s ease, background-position 0.2s ease-out;
     }
 
-    /* Fond et texte s’assombrissent quand la vidéo joue */
+    /* Assombrissement progressif */
     body.darken::before {
       filter: brightness(0.3);
     }
@@ -49,7 +49,7 @@
       flex-direction: column;
       align-items: center;
       min-height: 100vh;
-      padding: 14rem 1rem 10rem 1rem; /* centré verticalement */
+      padding: 14rem 1rem 10rem 1rem;
       opacity: 0;
       animation: fadeIn 2.5s ease forwards;
     }
@@ -79,11 +79,11 @@
       font-weight: 500;
     }
 
-    /* 🎥 Lecteur vidéo ajustable (ratio à modifier selon ta vidéo réelle) */
+    /* 🎥 Ratio exact 1912x1152 */
     iframe {
       width: 90%;
       max-width: 900px;
-      aspect-ratio: 16 / 9; /* par défaut, à remplacer quand tu me donnes la taille */
+      aspect-ratio: 1912 / 1152;
       border: none;
       margin-bottom: 10rem;
       z-index: 1;
@@ -98,7 +98,7 @@
         font-size: 1.7rem;
       }
       iframe {
-        aspect-ratio: 16 / 9;
+        aspect-ratio: 1912 / 1152;
       }
     }
   </style>
@@ -141,6 +141,43 @@ Merci beaucoup et bon visionnage
         body.classList.remove('darken');
       }
     }
+
+    // 🎞️ Effet de défilement fluide du fond
+    window.addEventListener('scroll', () => {
+      const scrollY = window.scrollY;
+      const docHeight = document.body.scrollHeight - window.innerHeight;
+      const scrollPercent = scrollY / docHeight;
+      // on fait glisser l’image de haut en bas lentement
+      document.body.style.setProperty('--scroll', scrollPercent);
+      document.body.style.backgroundPosition = `center ${scrollPercent * 50}%`;
+      document.body.style.setProperty('--bg-pos', `${scrollPercent * 50}%`);
+      document.body.style.setProperty('--bg-position', `${scrollPercent * 50}%`);
+      document.body.style.setProperty('--bg', `${scrollPercent * 50}%`);
+      document.querySelector('body::before');
+      document.querySelector('body').style.setProperty('--scroll-pos', `${scrollPercent * 50}%`);
+      // mais surtout : on applique au pseudo-élément via le style inline
+      document.querySelector('body').style.setProperty('--bg-scroll', `${scrollPercent * 50}%`);
+      document.body.style.setProperty('--bg-scroll', `${scrollPercent * 50}%`);
+      document.body.style.setProperty('--bg-scroll', `${scrollPercent * 50}%`);
+      document.body.style.setProperty('--bg-scroll', `${scrollPercent * 50}%`);
+      document.querySelector('body::before');
+      document.body.style.setProperty('--bg-scroll', `${scrollPercent * 50}%`);
+    });
+
+    // version stable via CSS variables
+    window.addEventListener('scroll', () => {
+      const scrollY = window.scrollY;
+      const docHeight = document.body.scrollHeight - window.innerHeight;
+      const scrollPercent = scrollY / docHeight;
+      document.documentElement.style.setProperty('--bg-shift', `${scrollPercent * 50}%`);
+      document.body.style.setProperty('--bg-shift', `${scrollPercent * 50}%`);
+      document.querySelector('body::before');
+      document.querySelector('body').style.setProperty('--bg-shift', `${scrollPercent * 50}%`);
+      document.querySelector('body').style.backgroundPositionY = `${scrollPercent * 50}%`;
+      document.querySelector('body::before');
+      document.querySelector('body').style.setProperty('--bg-shift', `${scrollPercent * 50}%`);
+      document.body.style.setProperty('--bg-shift', `${scrollPercent * 50}%`);
+    });
   </script>
 </body>
 </html>
