--- a/index.html
+++ b/index.html
@@ -11,33 +11,35 @@
       box-sizing: border-box;
     }
 
-    body {
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-      color: #b94aa6;
-      text-align: center;
+    html, body {
+      height: 100%;
       overflow-x: hidden;
-      min-height: 200vh; /* permet de défiler */
-      position: relative;
-      transition: color 1s ease;
+      scroll-behavior: smooth;
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     }
 
-    /* 🌄 Image de fond pleine largeur + défilement fluide */
-    body::before {
-      content: "";
+    /* 🌄 Le fond est un vrai élément, pas un pseudo */
+    #background {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
-      height: 120%; /* un peu plus haute pour permettre le glissement */
+      height: 120%; /* un peu plus haut que l’écran pour pouvoir glisser */
       background: url("Capture d'écran 2025-09-10 140417.png") top center no-repeat;
-      background-size: 100% auto;
+      background-size: 100% auto; /* pleine largeur */
       background-color: black;
       z-index: -1;
-      transition: filter 1s ease, background-position 0.2s ease-out;
+      transition: filter 1s ease;
     }
 
-    /* Assombrissement progressif */
-    body.darken::before {
+    /* Le contenu principal */
+    body {
+      color: #b94aa6;
+      text-align: center;
+      transition: color 1s ease;
+    }
+
+    body.darken #background {
       filter: brightness(0.3);
     }
     body.darken {
@@ -48,7 +50,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      min-height: 100vh;
+      min-height: 200vh; /* page plus longue pour défiler */
       padding: 14rem 1rem 10rem 1rem;
       opacity: 0;
       animation: fadeIn 2.5s ease forwards;
@@ -79,11 +81,10 @@
       font-weight: 500;
     }
 
-    /* 🎥 Ratio exact 1912x1152 */
     iframe {
       width: 90%;
       max-width: 900px;
-      aspect-ratio: 1912 / 1152;
+      aspect-ratio: 1912 / 1152; /* ratio exact */
       border: none;
       margin-bottom: 10rem;
       z-index: 1;
@@ -91,19 +92,15 @@
     }
 
     @media (max-width: 768px) {
-      p {
-        font-size: 1.1rem;
-      }
-      h1, p span:first-child {
-        font-size: 1.7rem;
-      }
-      iframe {
-        aspect-ratio: 1912 / 1152;
-      }
+      p { font-size: 1.1rem; }
+      h1, p span:first-child { font-size: 1.7rem; }
+      iframe { aspect-ratio: 1912 / 1152; }
     }
   </style>
 </head>
 <body>
+  <div id="background"></div>
+
   <div class="content">
     <p>
       <span>Merci</span>
@@ -122,7 +119,7 @@ Merci beaucoup et bon visionnage
   </div>
 
   <script>
-    // API YouTube
+    // Charger API YouTube
     const tag = document.createElement('script');
     tag.src = "https://www.youtube.com/iframe_api";
     document.body.appendChild(tag);
@@ -142,41 +139,14 @@ Merci beaucoup et bon visionnage
       }
     }
 
-    // 🎞️ Effet de défilement fluide du fond
+    // 🌅 Défilement fluide du fond
     window.addEventListener('scroll', () => {
       const scrollY = window.scrollY;
       const docHeight = document.body.scrollHeight - window.innerHeight;
       const scrollPercent = scrollY / docHeight;
-      // on fait glisser l’image de haut en bas lentement
-      document.body.style.setProperty('--scroll', scrollPercent);
-      document.body.style.backgroundPosition = `center ${scrollPercent * 50}%`;
-      document.body.style.setProperty('--bg-pos', `${scrollPercent * 50}%`);
-      document.body.style.setProperty('--bg-position', `${scrollPercent * 50}%`);
-      document.body.style.setProperty('--bg', `${scrollPercent * 50}%`);
-      document.querySelector('body::before');
-      document.querySelector('body').style.setProperty('--scroll-pos', `${scrollPercent * 50}%`);
-      // mais surtout : on applique au pseudo-élément via le style inline
-      document.querySelector('body').style.setProperty('--bg-scroll', `${scrollPercent * 50}%`);
-      document.body.style.setProperty('--bg-scroll', `${scrollPercent * 50}%`);
-      document.body.style.setProperty('--bg-scroll', `${scrollPercent * 50}%`);
-      document.body.style.setProperty('--bg-scroll', `${scrollPercent * 50}%`);
-      document.querySelector('body::before');
-      document.body.style.setProperty('--bg-scroll', `${scrollPercent * 50}%`);
-    });
-
-    // version stable via CSS variables
-    window.addEventListener('scroll', () => {
-      const scrollY = window.scrollY;
-      const docHeight = document.body.scrollHeight - window.innerHeight;
-      const scrollPercent = scrollY / docHeight;
-      document.documentElement.style.setProperty('--bg-shift', `${scrollPercent * 50}%`);
-      document.body.style.setProperty('--bg-shift', `${scrollPercent * 50}%`);
-      document.querySelector('body::before');
-      document.querySelector('body').style.setProperty('--bg-shift', `${scrollPercent * 50}%`);
-      document.querySelector('body').style.backgroundPositionY = `${scrollPercent * 50}%`;
-      document.querySelector('body::before');
-      document.querySelector('body').style.setProperty('--bg-shift', `${scrollPercent * 50}%`);
-      document.body.style.setProperty('--bg-shift', `${scrollPercent * 50}%`);
+      const bg = document.getElementById('background');
+      // Déplacer l'image verticalement de haut vers bas (0 à 100%)
+      bg.style.backgroundPosition = `center ${scrollPercent * 100}%`;
     });
   </script>
 </body>
